--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "test": "vitest --coverage"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-hook-form": "^7.44.1",
+    "react-router-dom": "^6.11.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
