--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "clsx": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.8",
     "react-hook-form": "^7.44.1",
     "react-router-dom": "^6.11.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
@@ -34,6 +36,7 @@
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
-    "vitest": "^0.31.1"
+    "vitest": "^0.31.1",
+    "vitest-dom": "^0.1.0"
   }
 }
