--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test": "vitest --coverage"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.1.0",
     "clsx": "^1.2.1",
     "react": "^18.2.0",
